fixed issue with long links not wrapping and made sure links in comments open in a new tab

--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -28,6 +28,10 @@
     margin-top: 20px;
 }
 
+.postDivBody {
+    word-wrap: break-word;
+}
+
 .postDivBody a {
     color: rgb(0, 225, 255);
 }
